--- a/argo-apps/sealedsecrets.yaml
+++ b/argo-apps/sealedsecrets.yaml
@@ -1,11 +1,17 @@
-project: default
-source:
-  repoURL: https://bitnami-labs.github.io/sealed-secrets/
-  targetRevision: 2.17.9
-  chart: sealed-secrets
-destination:
-  server: https://kubernetes.default.svc
-  namespace: kube-system
-syncPolicy:
-  automated:
-    enabled: true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: sealsecret
+  namespace: argocd
+spec:
+  destination:
+    namespace: kube-system
+    server: https://kubernetes.default.svc
+  project: default
+  source:
+    chart: sealed-secrets
+    repoURL: https://bitnami-labs.github.io/sealed-secrets
+    targetRevision: 2.17.9
+  syncPolicy:
+    automated:
+      enabled: true
