--- a/monitoring/alertManager/deployment_alertmanager.yaml
+++ b/monitoring/alertManager/deployment_alertmanager.yaml
@@ -1,43 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: alertmanager-deployment
+  name: alertmanager
   namespace: monitoring
-  labels:
-    app: alertmanager
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: alertmanager
   template:
-    metadata:
-      labels:
-        app: alertmanager
     spec:
       containers:
-      - name: alertmanager
-        image: prom/alertmanager:v0.25.0
-        env:
-          - name: SLACK_WEBHOOK_URL
-            valueFrom:
-              secretKeyRef:
-                name: alertmanager-slack-secret
-                key: slack-webhook-url
-        args:
-          - "--config.file=/etc/alertmanager/alertmanager.yml"
-          - "--storage.path=/alertmanager"
-        ports:
-        - containerPort: 9093
-          name: http
-        volumeMounts:
-        - name: alertmanager-config-volume
-          mountPath: /etc/alertmanager
-        - name: alertmanager-storage
-          mountPath: /alertmanager
+        - name: alertmanager
+          image: prom/alertmanager:v0.25.0
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - |
+              WEBHOOK_URL="$$(cat /etc/secrets/slack-webhook-url)"
+              sed -i "s|slack_api_url: ''|slack_api_url: '$WEBHOOK_URL'|" /etc/alertmanager/alertmanager.yml
+              /bin/alertmanager --config.file=/etc/alertmanager/alertmanager.yml
+          volumeMounts:
+            - name: config
+              mountPath: /etc/alertmanager
+            - name: slack-secret
+              mountPath: /etc/secrets
+              readOnly: true
       volumes:
-      - name: alertmanager-config-volume
-        configMap:
-          name: alertmanager-config
-      - name: alertmanager-storage
-        emptyDir: {}
+        - name: config
+          configMap:
+            name: alertmanager-config
+        - name: slack-secret
+          secret:
+            secretName: alertmanager-slack-secret
+            items:
+              - key: slack-webhook-url
+                path: slack-webhook-url
+  selector:
