--- a/monitoring/alertManager/deployment_alertmanager.yaml
+++ b/monitoring/alertManager/deployment_alertmanager.yaml
@@ -4,7 +4,14 @@ metadata:
   name: alertmanager
   namespace: monitoring
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: alertmanager
   template:
+    metadata:
+      labels:
+        app: alertmanager
     spec:
       containers:
         - name: alertmanager
@@ -16,10 +23,17 @@ spec:
             - |
               # Получаем webhook URL из секрета
               WEBHOOK_URL="$$(cat /etc/secrets/slack-webhook-url)"
+              echo "Webhook URL: $${WEBHOOK_URL:0:30}..."
               # Заменяем пустую строку в конфиге на реальный URL
-              sed -i "s|slack_api_url: ''|slack_api_url: '$WEBHOOK_URL'|" /etc/alertmanager/alertmanager.yml
+              sed -i "s|slack_api_url: ''|slack_api_url: '$WEBHOOK_URL'|g" /etc/alertmanager/alertmanager.yml
+              # Проверяем замену
+              echo "Config after replacement:"
+              grep slack_api_url /etc/alertmanager/alertmanager.yml
               # Запускаем Alertmanager
-              /bin/alertmanager --config.file=/etc/alertmanager/alertmanager.yml
+              exec /bin/alertmanager --config.file=/etc/alertmanager/alertmanager.yml
+          ports:
+            - containerPort: 9093
+              name: http
           volumeMounts:
             - name: config
               mountPath: /etc/alertmanager
@@ -36,3 +50,70 @@ spec:
             items:
               - key: slack-webhook-url
                 path: slack-webhook-url
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: alertmanager-config
+  namespace: monitoring
+data:
+  alertmanager.yml: |
+    global:
+      slack_api_url: ''
+      resolve_timeout: 5m
+    route:
+      group_by: ['alertname', 'pod']
+      group_wait: 10s
+      group_interval: 10s
+      repeat_interval: 1h
+      receiver: 'slack-notifications'
+    receivers:
+    - name: 'slack-notifications'
+      slack_configs:
+      - channel: '#alerts'
+        send_resolved: true
+        title: '{{ range .Alerts }}{{ .Annotations.summary }}{{ end }}'
+        text: |-
+          {{ range .Alerts }}
+          *Alert:* {{ .Annotations.summary }}
+          *Description:* {{ .Annotations.description }}
+          *Severity:* {{ .Labels.severity }}
+          *Pod:* {{ .Labels.pod }}
+          *Namespace:* {{ .Labels.namespace }}
+          *Time:* {{ .StartsAt }}
+          {{ end }}
+        icon_url: https://avatars3.githubusercontent.com/u/3380462
+        username: 'Alertmanager'
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: alertmanager-service
+  namespace: monitoring
+spec:
+  selector:
+    app: alertmanager
+  ports:
+    - port: 9093
+      targetPort: 9093
+      protocol: TCP
+      name: http
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: alertmanager-ingress
+  namespace: monitoring
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: alertmanager.k8s-15.sa
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: alertmanager-service
+                port:
+                  number: 9093
