--- a/monitoring/alertmanager.yaml
+++ b/monitoring/alertmanager.yaml
@@ -1,17 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: alertmanager
-  namespace: monitoring
-spec:
-  type: ClusterIP
-  selector:
-    app: alertmanager
-  ports:
-    - name: web
-      port: 9093
-      targetPort: 9093
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -63,6 +49,25 @@ spec:
       port: 9093
       targetPort: 9093
       nodePort: 31004
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-alertmanager
+  namespace: monitoring
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: alertmanager.k8s-15.sa
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: alertmanager-nodeport
+                port:
+                  number: 9093
 ---
 apiVersion: apps/v1
 kind: Deployment
