--- a/monitoring/alertmanager.yaml
+++ b/monitoring/alertmanager.yaml
@@ -1,8 +1,11 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: alertmanager
   namespace: monitoring
+  labels:
+    app: alertmanager
 spec:
   replicas: 1
   selector:
@@ -15,30 +18,33 @@ spec:
     spec:
       containers:
         - name: alertmanager
-          image: prom/alertmanager:v0.27.0
+          image: prom/alertmanager
           args:
-            - "--config.file=/etc/alertmanager/alertmanager.yml"
+            - "--config.file=/etc/alertmanager/alertmanager.yaml"
             - "--storage.path=/alertmanager"
           ports:
             - containerPort: 9093
-          env:
-            - name: SLACK_URL
-              valueFrom:
-                secretKeyRef:
-                  name: alertmanager-secrets
-                  key: slack-api-url
           volumeMounts:
-            - name: config-volume
+            - name: config
               mountPath: /etc/alertmanager
+            - name: slack-secret
+              mountPath: /etc/alertmanager/secrets
+              readOnly: true
       volumes:
-        - name: config-volume
+        - name: config
           configMap:
             name: alertmanager-config
+            items:
+              - key: alertmanager.yaml
+                path: alertmanager.yaml
+        - name: slack-secret
+          secret:
+            secretName: alertmanager-slack-webhook
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: alertmanager-nodeport
+  name: alertmanager-service
   namespace: monitoring
 spec:
   type: NodePort
@@ -53,8 +59,9 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-alertmanager
-  namespace: monitoring
+  name: ingress-sa
+  annotations:
+    nginx.ingress.kubernetes.io/server-alias: "alertmanager.k8s-16.sa"
 spec:
   ingressClassName: nginx
   rules:
@@ -65,34 +72,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: alertmanager-nodeport
+                name: alertmanager-service
                 port:
                   number: 9093
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: stress-test
-  namespace: monitoring
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: stress-test
-  template:
-    metadata:
-      labels:
-        app: stress-test
-    spec:
-      containers:
-        - name: stress-container
-          image: polinux/stress
-          resources:
-            requests:
-              memory: "64Mi"
-              cpu: "50m"
-            limits:
-              memory: "128Mi"
-              cpu: "100m"
-          command: ["stress"]
-          args: ["--cpu", "2", "--vm", "1", "--vm-bytes", "100M", "--timeout", "300s"]
