--- a/monitoring/alertmanager.yaml
+++ b/monitoring/alertmanager.yaml
@@ -59,7 +59,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-sa
+  name: ingress-alertmanager
   annotations:
     nginx.ingress.kubernetes.io/server-alias: "alertmanager.k8s-16.sa"
 spec:
