--- a/monitoring/prometheus.yaml
+++ b/monitoring/prometheus.yaml
@@ -64,7 +64,7 @@ data:
       - scheme: http
         static_configs:
         - targets:
-          - "alertmanager.monitoring.svc:9093"
+          - "alertmanager-service.monitoring.svc:9093"
 
     scrape_configs:
       - job_name: 'node-exporter'
