--- a/monitoring-second/stress.yaml
+++ b/monitoring-second/stress.yaml
@@ -1,27 +1,15 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
-  name: stress-test
+  name: cpu-hog
   namespace: monitoring
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: stress-test
-  template:
-    metadata:
-      labels:
-        app: stress-test
-    spec:
-      containers:
-        - name: stress-container
-          image: polinux/stress
-          resources:
-            requests:
-              memory: "64Mi"
-              cpu: "50m"
-            limits:
-              memory: "128Mi"
-              cpu: "100m"
-          command: ["stress"]
-          args: ["--cpu", "2", "--vm", "1", "--vm-bytes", "100M", "--timeout", "300s"]
+  containers:
+    - name: cpu-hog
+      image: vish/stress
+      resources:
+        limits:
+          cpu: "1"
+      args:
+        - -cpus
+        - "1"
