--- a/.github/workflows/check-user.yml
+++ b/.github/workflows/check-user.yml
@@ -15,5 +15,6 @@ jobs:
     steps:
       - name: Trigger Jenkins Job
         run: |
+          echo "Username input: ${{ github.event.inputs.username }}"
           echo "${{ secrets.BASTION_HOST }} jenkins.k8s-15.sa" >> /etc/hosts
           curl -X POST -u "${{ secrets.JENKINS_ADMIN }}:${{ secrets.JENKINS_TOKEN }}" "${{ secrets.JENKINS_URL }}/job/${{ secrets.JOB_TOKEN }}/buildWithParameters?USERNAME=${{ secrets.JENKINS_USER }}"
