--- a/.github/workflows/check-user.yml
+++ b/.github/workflows/check-user.yml
@@ -15,11 +15,12 @@ jobs:
     steps:
       - name: Trigger Jenkins Job
         run: |
-          echo "Username input: ${{ github.event.inputs.username }}"
+          echo "Username input: ${{ secrets.JENKINS_USER }}"
           echo "${{ secrets.BASTION_HOST }} jenkins.k8s-15.sa" | sudo tee -a /etc/hosts
           curl -X POST -u "${{ secrets.JENKINS_ADMIN }}:${{ secrets.JENKINS_TOKEN }}" "${{ secrets.JENKINS_URL }}/job/${{ secrets.JOB_NAME }}/buildWithParameters?USERNAME=${{ secrets.JENKINS_USER }}"
           sleep 15
           LAST_BUILD_JSON=$(curl -s -u "${{ secrets.JENKINS_ADMIN }}:${{ secrets.JENKINS_TOKEN }}" "${{ secrets.JENKINS_URL }}/job/${{ secrets.JOB_NAME }}/lastBuild/api/json")
+          RESULT=$(echo "$LAST_BUILD" | grep -o '"result":"[^"]*"' | cut -d'"' -f4)
           if [ "$RESULT" = "SUCCESS" ]; then
             echo "✅ User EXISTS"
             echo "user_exists=true" >> $GITHUB_OUTPUT
