--- a/.github/workflows/check-user.yml
+++ b/.github/workflows/check-user.yml
@@ -21,11 +21,11 @@ jobs:
           sleep 15
           LAST_BUILD_JSON=$(curl -s GET -u "${{ secrets.JENKINS_ADMIN }}:${{ secrets.JENKINS_TOKEN }}" "${{ secrets.JENKINS_URL }}/job/${{ secrets.JOB_NAME }}/lastBuild/api/json")
           RESULT=$(echo "$LAST_BUILD" | grep -o '"result":"[^"]*"' | cut -d'"' -f4)
-          echo $LAST_BUILD_JSON
-          if [ "$RESULT" = "SUCCESS" ]; then
+          echo $RESULT
+          if [ $RESULT = "SUCCESS" ]; then
             echo "✅ User EXISTS"
             echo "user_exists=true" >> $GITHUB_OUTPUT
-          elif [ "$RESULT" = "FAILURE" ]; then
+          elif [ $RESULT = "FAILURE" ]; then
             echo "❌ User does NOT exist"
             echo "user_exists=false" >> $GITHUB_OUTPUT
             # НЕ выходим с ошибкой здесь - проверяем в следующем шаге
